fix lineage column icon and entity summary panel owner label not visible (#21160)

--- a/openmetadata-ui/src/main/resources/ui/src/components/Entity/EntityLineage/custom-node.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Entity/EntityLineage/custom-node.less
@@ -86,14 +86,10 @@
       border-radius: 0;
 
       .ant-collapse-header {
-        padding: 0;
+        padding: 4px;
         font-size: 12px;
 
         .custom-node-column-container {
-          background-color: @lineage-collapse-header;
-        }
-
-        .lineage-column-node-handle {
           background-color: @lineage-collapse-header;
         }
       }
